--- a/source/_posts/读过的书.md
+++ b/source/_posts/读过的书.md
@@ -1,7 +1,7 @@
 ---
 title: 读过的书
 date: 2023-07-09 12:56:50
-tags: 读过的书
+tags: [读过的书]
 ---
 ![](https://s3.bmp.ovh/imgs/2023/10/12/1f0524cec40e60b3.gif)
 
@@ -120,19 +120,4 @@ tags: 读过的书
     102.《一句顶一万句》刘震云
     103.《娱乐春秋》姬叉
     104.《紫微斗数全书》陈抟
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    105.《增删卜易（上）》野鹤老人
