--- a/source/_posts/六爻.md
+++ b/source/_posts/六爻.md
@@ -14,17 +14,11 @@ tags: [命理]
 方位：卯为东，辰巳为东南，午为南，未申为西南，酉为西，戌亥为西北，子为北，丑寅为东北。
 
 
+金长生在巳，旺在酉，墓在丑，绝在寅；
 
+木长生在亥，旺在卯，墓在未，绝在申；
 
+火长生在寅，旺在午，墓在戌，绝在亥；
 
-
-
-
-
-
-
-
-
-
-
+水土长生在申，旺在子，墓在辰，绝在巳；
 
