--- a/source/_posts/六爻.md
+++ b/source/_posts/六爻.md
@@ -30,3 +30,32 @@ tags: [命理]
 | 甲午、乙未、丙申、丁酉、戊戌、己亥、庚子、辛丑、壬寅、癸卯。 |   辰、巳 |
 | 甲辰、乙巳、丙午、丁未、戊申、己酉、庚戌、辛亥、壬子、癸丑。 |   寅、卯 |
 | 甲寅、乙卯、丙辰、丁巳、戊午、己未、庚申、辛酉、壬戌、癸亥 。|   子、丑 |
+
+寅：正月；卯：二月；辰：三月；巳：四月；午：五月；未：六月；申：七月；酉：八月；戌：九月；亥：十月；子：十一月；丑：十二月
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
