--- a/source/_posts/六爻.md
+++ b/source/_posts/六爻.md
@@ -7,7 +7,7 @@ tags: [命理]
 
 六合：子丑合，寅亥合，卯戌合，辰酉合，午未合，巳申合。
 
-申子辰合水局，亥卯未合木局，巳酉丑合金局，寅午戌合火局。三合局，是长生、帝旺与墓库，三者相聚而成局。
+水局：申子辰；木局：亥卯未；金局：巳酉丑；火局：寅午戌
 
 十二地支：子，丑，寅，卯，辰，巳，午，未，申，酉，戌，亥
 
@@ -32,5 +32,3 @@ tags: [命理]
 | 甲午、乙未、丙申、丁酉、戊戌、己亥、庚子、辛丑、壬寅、癸卯。 |   辰、巳 |
 | 甲辰、乙巳、丙午、丁未、戊申、己酉、庚戌、辛亥、壬子、癸丑。 |   寅、卯 |
 | 甲寅、乙卯、丙辰、丁巳、戊午、己未、庚申、辛酉、壬戌、癸亥 。|   子、丑 |
-
-
