--- a/source/_posts/六爻.md
+++ b/source/_posts/六爻.md
@@ -24,6 +24,12 @@ tags: [命理]
 
 水土长生在申，旺在子，墓在辰，绝在巳；
 
+子卯相刑，无礼之刑。
+寅已申三刑，无恩之刑。
+丑戌未，持势之刑。
+辰午酉亥为自刑。
+
+
 | 日辰 | 空亡 |
 |------|------|
 | 甲子、乙丑、丙寅、丁卯、戊辰、己巳、庚午、辛未、壬申、癸酉。 |   戌、亥 |
