--- a/source/_posts/六爻.md
+++ b/source/_posts/六爻.md
@@ -24,10 +24,13 @@ tags: [命理]
 
 水土长生在申，旺在子，墓在辰，绝在巳；
 
-子卯相刑，无礼之刑。
-寅已申三刑，无恩之刑。
-丑戌未，持势之刑。
-辰午酉亥为自刑。
+
+子卯成刑局；
+巳申寅成刑局；
+午亥酉成刑局；
+丑未辰成刑局；
+丑未戌成刑局；
+辰戌丑成刑局；
 
 
 | 日辰 | 空亡 |
