--- a/source/_posts/何以卜命.md
+++ b/source/_posts/何以卜命.md
@@ -19,8 +19,7 @@ tags: [随感录，命理]
 
 而对于姻缘来说，夫妻宫自化忌刚讲过了，也不利姻缘，看不到很强的桃花，得自己努努力，主动些了。另有对未来对象的一些描述，这女孩子有点文艺范的，然后有些敏感，容易胡思乱想，可能对于玄学也会感兴趣，不过不会特别强。这是这个大限，会遇到并和你在一起至少一段时间的。天府坐流年夫妻宫，这颗星辰比较有钱，放财帛宫最好，夫妻宫太孤了。然后大限天相坐夫妻宫，除了之前说的那些再补充一下，对方高概率是你曾经认识的人，同学朋友可能性比较大。武曲七杀特性，缘分薄，难有助力。此外性刚强硬，一般和你关系不太好。天刑坐夫妻宫，主常常因为对方烦忧，难以沟通，易有误会。明年（即2026年），太阴星化科来到，你可以多试试，会对你桃花有加成，这个要把握好。左辅加会，可能会有好哥们帮你介绍或者暗中帮你，当然，左辅特性，不一定帮好，但肯定是帮了……
 
-这是算命得来的结果，并且说我的命格已经很好了，只是孤克。后又推荐几个同学朋友来找月上霄算命，结果也大致相符。
-后来我自己跟着倪海厦的课程研究紫微斗数和周易，发现确实水平摸不到很高，后又转向研究六爻占卜。六爻则是直接看野鹤老人的《增删卜易》，现在占卜的准确度还是有一定的保证。
+这是算命得来的结果，并且说我的命格已经很好了，只是孤克。后又推荐几个同学朋友来找月上霄算命，结果也大致相符。后来我自己跟着倪海厦的课程研究紫微斗数和周易，发现确实水平摸不到很高，后又转向研究六爻占卜。六爻则是直接看野鹤老人的《增删卜易》，现在占卜的准确度还是有一定的保证。
 
 对于姻缘一事，在紫微之后，用六爻还占过两卦。两卦相间四个月，但结果几乎相差无几。头一卦是我来占卜，而月上霄解卦；后一卦则实是看到《婚姻章》时有感而占，自己解的卦象了。分别如下，第一卦时问的是和之前那个女孩的缘分有无，断卦如下：“和你确实相合，但是她现在和月建合走了，导致你没处合了。此外兄弟发动揭示存在竞争关系。你俩我觉得是没啥问题的，是有缘分在的。但是未来情形不利你，兄弟发动化身官鬼，这个在未来会化作新的阻力”；第二卦占卜出来，结果出乎意料的相似，问的是姻缘如何：静卦六合，应合日建。静卦为火山旅。应合日建也合世爻，神煞桃花又在应爻妻财。除应爻妻财外，还有一处妻财伏藏官鬼，主另有感情。世爻下又伏藏父母来克，或许是催婚之象，但此时旬空，催婚攻势还没开始。第二卦是静卦，说明事情并没有什么变化。我疑心第二卦占时，神告诉的仍然是与之前女孩的事，但我问的确是姻缘无疑，是我的心念有疑还是未来确有转机呢，我不清楚。另为朋友占过一次近日情缘，在此不提。
 
