--- a/source/_posts/六爻.md
+++ b/source/_posts/六爻.md
@@ -41,3 +41,38 @@ tags: [命理]
 | 甲午、乙未、丙申、丁酉、戊戌、己亥、庚子、辛丑、壬寅、癸卯。 |   辰、巳 |
 | 甲辰、乙巳、丙午、丁未、戊申、己酉、庚戌、辛亥、壬子、癸丑。 |   寅、卯 |
 | 甲寅、乙卯、丙辰、丁巳、戊午、己未、庚申、辛酉、壬戌、癸亥 。|   子、丑 |
+
+
+月令旺衰：
+爻临月令建显旺相一（即爻与月令相同）。如寅木爻逢寅月；
+爻得月令合显旺相二（即爻与月令相合）。如寅木爻逢亥月；
+爻得月令生显旺相三（即爻受月令之五行相生）。如寅木爻逢子月；
+爻得月令扶（即爻与月令同一五行属性）显旺相四。如寅木爻逢卯月；
+遇此四种情况为爻得月令所旺，而旺相程度却分两层，其中爻得月建、爻得月合为高层次的旺相，其余属于一般层次的旺相，高层次的旺相力量，要比一般层次的衰败力量作用力要大。
+
+爻遭月令相冲显衰相一，何为月破？爻被月冲则为月破。如寅木爻逢申月；
+爻被月令五行克伤显衰相二（即爻受月令之五行相克）。如寅木爻逢酉月；
+爻与月令的关系是爻克月令，叫爻在月上休囚，爻显衰相三。如寅木爻逢丑月；
+爻与月令的关系是爻生月令，也叫爻在月上休囚，爻显衰相四。如寅木爻逢午月；
+遇此四种情况为爻在月令显衰相，而衰相程度也分两层，其中爻遭月破为高层次的衰相，其余属一般层次的衰相，高层次的衰败力量，要比一般层次的旺相力量作用力要大。例如寅木爻逢申月子日，寅木得日令子水生显旺，同时被月令申金冲破显衰，但因爻遭月破属于高层次的衰败，力量要大于相生一般层次的旺相反作用力，所以寅木在此日月组合中，总体依然定义为衰败。
+
+旺相休囚是只应用于月建的专用理论知识。
+
+日建旺衰：
+爻临日建显旺相一（即爻与日令相同）。如寅木爻逢寅日；
+静爻得日令合显旺相二（即静爻与日令相合）。如寅木爻安静不动，逢亥日；
+爻得日令生显旺相三（即爻受日令之五行相生）。如寅木爻逢子日；
+爻得日令扶（即爻与日同一五行属性）显旺相四。如寅木爻逢卯日；
+爻临日令长生与帝旺，显旺相五。如土爻逢申日则长生在日令，逢子日则旺在日令。
+遇此五种情况算作爻得日旺，而旺相程度也分两层，其中爻得日建、静爻得日合为高层次的旺相，其余属一般层次的旺相，高层次的旺相力量，要比一般层次的衰败力量要大。
+
+爻与日令的关系是爻克日，爻为平相不显旺衰。如寅木爻逢丑日；或午火爻逢酉日。
+爻与日令的关系是爻生日，也是爻为平相不显旺衰。如寅木爻逢午日；或午火爻逢辰日。
+
+爻被日令克显衰相一（即爻受日令之五行相克）。如寅木爻逢酉日；
+爻遭日令绝显衰相二。如子水爻逢巳日，则叫爻绝在日。
+遇此两种情况而爻显衰相，但都属于一般层次的衰败力量。
+
+
+生旺墓绝理论于日月组合中，只存在于日令而不存在于月令；
+这正好和旺相休囚理论互相颠倒，旺相休囚理论则只存在于月令而不存在于日令。
