--- a/source/_posts/六爻.md
+++ b/source/_posts/六爻.md
@@ -76,3 +76,7 @@ tags: [命理]
 
 生旺墓绝理论于日月组合中，只存在于日令而不存在于月令；
 这正好和旺相休囚理论互相颠倒，旺相休囚理论则只存在于月令而不存在于日令。
+
+爻旺附旺爻衰附衰。用神戌土因月令而显出衰败，在此条件下戌土在申日就不能算长生，而应看作是爻生日的平相关系，用神于月衰日平，总体依然为衰相而非平相，用神衰弱所以无财。
+
+静而逢日合，谓之合起；动而逢日合，谓之合绊。
