--- a/source/_posts/六爻.md
+++ b/source/_posts/六爻.md
@@ -80,3 +80,5 @@ tags: [命理]
 爻旺附旺爻衰附衰。用神戌土因月令而显出衰败，在此条件下戌土在申日就不能算长生，而应看作是爻生日的平相关系，用神于月衰日平，总体依然为衰相而非平相，用神衰弱所以无财。
 
 静而逢日合，谓之合起；动而逢日合，谓之合绊。
+
+虽然是用神变出月令之旺，但同时也属于世爻变出仇神，“月令利于短，仇神忌于长”。
